# PolyPanel

./: .project  404.html  Makefile  README.md  docker-compose.yml  index.html
arduino.ide/: arduino.ide.ino  motor_logic.ino
arduino.ide/sketch_apr26a/: sketch_apr26a.ino
assets/: index-0AQQzfh0.js  index-4rqPTu_u.js  index-69UyacNh.css  index-AEW4jluN.js  index-BErl4IOc.css  index-BgPoaUyj.css  index-BqCSw0oo.js  index-BulfKLgq.js  index-BykkslMM.js  index-CFQjyjF1.css  index-CRQQF6lT.js  index-CqqaPw9X.css  index-DE4yQHvQ.js  index-DJZwMbGG.js  index-DLkbQ6JK.js  index-DPImHNRN.js  index-DbXe5iMj.js  index-DfMgtZ1U.js  index-DrHwRgNm.js  index-DxxSXvSK.js  index-NOjIJGgC.js  index-Siss7skO.js  index-TOeYSxWs.css  index-YZwj0UNZ.js  index-p200tovP.js  index-zlddXy7N.js  maplibre-gl-0t9tc0oz.js  maplibre-gl-AI29QVB1.js  maplibre-gl-BCWZd4HB.js  maplibre-gl-BQnpnMKx.js  maplibre-gl-CINlGBQb.js  maplibre-gl-D3_r4jCU.js
backend/: Dockerfile.dev  pom.xml
backend/src/main/resources/: application.properties  application.yaml
frontend/: AGENTS.md  Dockerfile  README.md  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/LandingPage/: AboutMissionSection.tsx  BenefitsSection.tsx  ContactCTASection.tsx  FooterSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  PlanningCommunitySection.tsx  PricingSection.tsx  Reveal.tsx  index.ts  (+1 more)
frontend/src/lib/: gsap.ts
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx
python_worker/: main.py  pyproject.toml
(+47 files in other folders)
